syntax = "proto3";

package pb;

option go_package = "./pb";

import "doctor_attributes.proto";

service DoctorServices {
	rpc RegisterDoctor(RegisterDoctorRequest) returns (RegisterDoctorResponse) {}
}
